# templatebot

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .travis.yml  AGENTS.md  CHANGELOG.md  CHANGELOG.rst  Dockerfile  Makefile  README.md  README.rst  noxfile.py  pyproject.toml  ruff-shared.toml  setup.cfg  setup.py  tox.ini
.claude/skills/project-mechanics/: SKILL.md
.devcontainer/: Dockerfile  devcontainer.json
.devcontainer/stoker/: devcontainer.json
.github/workflows/: ci.yaml  periodic-ci.yaml
.stoker/: settings.toml
changelog.d/: 20241008_162948_jsick_DM_43699.md  20250708_112247_jsick_DM_51728.md  20250708_140713_jsick_DM_51728_ook_authors.md  20250709_130755_jsick_DM_51752.md  20250710_125114_jsick_fix_ror_parsing.md  20260622_000000_DM_51754_python_314.md  20260622_000001_DM_51754_nox_colima.md  20260622_000002_DM_51754_precommit_ruff.md  20260622_000003_DM_51754_makefile_docs_devcontainer.md  20260630_101943_jonathan_DM_51754.md
docs/: conf.py  index.rst
kubernetes/: config.yaml  deployment.yaml  ingress.yaml  secret.template.yaml
manifests/: secret.template.yaml
manifests/base/: configmap.yaml  deployment.yaml  kustomization.yaml
original/events/handlers/: projectrender.py
original/slack/: dialog.py  router.py
original/slack/handlers/: filedialogsubmission.py  projectdialogsubmission.py  projectlisting.py
requirements/: dev.in  dev.txt  main.in  main.txt  tox.txt
scripts/: update-uv-version.sh
src/templatebot/: app.py  cli.py  config.py  constants.py  factory.py  main.py  repo.py
src/templatebot/dependencies/: consumercontext.py
src/templatebot/events/schemas/: templatebot.prerender_v1.json
src/templatebot/handlers/: kafka.py
src/templatebot/handlers/internal/: __init__.py  endpoints.py
src/templatebot/middleware/: logging.py
src/templatebot/services/: slackblockactions.py  slackmessage.py  slackview.py  template.py  templaterepo.py
src/templatebot/slack/: __init__.py  router.py
src/templatebot/slack/handlers/: filedialogsubmission.py  help.py  projectdialogsubmission.py
src/templatebot/storage/: authordb.py  gitclone.py  githubappclientfactory.py  githubrepo.py  ltdclient.py  repo.py
src/templatebot/storage/slack/: __init__.py  _client.py  _models.py  blockkit.py  variablesmodal.py  views.py
templatebot/: app.py  cli.py  config.py  github.py  logging.py  repo.py  routes.py  slacklistener.py
templatebot/events/: avro.py  router.py  topics.py
templatebot/events/handlers/: __init__.py  projectrender.py
templatebot/events/schemas/: templatebot.postrender_v1.json  templatebot.prerender_v1.json  templatebot.render_ready_v1.json
templatebot/middleware/: logging.py
templatebot/roothandlers/: index.py
templatebot/slack/: __init__.py  chat.py  chatupdate.py  dialog.py  router.py  users.py
templatebot/slack/handlers/: __init__.py  filedialogsubmission.py  filelisting.py  fileselect.py  help.py  projectdialogsubmission.py  projectlisting.py  projectselect.py
tests/: conftest.py  test_healthcheck.py
tests/data/templates/: README.md
tests/data/templates/project_templates/safir_fastapi_app/: cookiecutter.json
tests/data/templates/project_templates/stack_package/: cookiecutter.json
tests/data/templates/project_templates/technote_rst/: cookiecutter.json
tests/handlers/: internal_test.py
tests/storage/slack/: blockkit_test.py  variablesmodal_test.py
